<resources>
    <string name="app_name">Football Score Counter</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="goalButton">Goal!</string>
    <string name="yellowCardButton">Yellow Card</string>
    <string name="redCardButton">Red Card</string>
    <string name="yellowCardScore">Yellow card:</string>
    <string name="redCardScore">Red card:</string>
    <string name="goals">Goals</string>
</resources>
