<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#8FBC8F"
    tools:context="com.example.android.footballscorecounter.MainActivity">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:onClick="resetScore"
            android:text="Reset" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/teamName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/teamA" />

                <TextView
                    android:id="@+id/team_a_score"
                    style="@style/goalScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="0" />

                <TextView
                    style="@style/goalTextWrap"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/goals" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textWraps"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/yellowCardScore" />

                    <TextView
                        android:id="@+id/a_yellow_card_score"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:text="0" />

                </LinearLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textWraps"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/redCardScore" />

                    <TextView
                        android:id="@+id/a_red_card_score"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:text="0" />

                </LinearLayout>

                <Button
                    style="@style/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="A"
                    android:onClick="addGoal"
                    android:text="@string/goalButton" />


                <Button
                    style="@style/button"
                    android:background="#FFFF00"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="A"
                    android:onClick="addYellowCard"
                    android:text="@string/yellowCardButton" />


                <Button
                    style="@style/button"
                    android:background="#FF0000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="A"
                    android:onClick="addRedCard"
                    android:text="@string/redCardButton" />


            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/teamName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/teamB" />

                <TextView
                    android:id="@+id/team_b_score"
                    style="@style/goalScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="0" />

                <TextView
                    style="@style/goalTextWrap"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/goals" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textWraps"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/yellowCardScore" />

                    <TextView
                        android:id="@+id/b_yellow_card_score"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:text="0" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textWraps"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/redCardScore" />

                    <TextView
                        android:id="@+id/b_red_card_score"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:text="0" />
                </LinearLayout>

                <Button
                    style="@style/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="B"
                    android:onClick="addGoal"
                    android:text="@string/goalButton" />

                <Button
                    style="@style/button"
                    android:background="#FFFF00"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="B"
                    android:onClick="addYellowCard"
                    android:text="@string/yellowCardButton" />

                <Button
                    style="@style/button"
                    android:background="#FF0000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="B"
                    android:onClick="addRedCard"
                    android:text="@string/redCardButton" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>